# MultiDevice_PointCloud

./: CMakeLists.txt  MultiDeviceSyncConfig.json  README.md  bash_settings.txt
include/: multiDevice_funcs.hpp
src/: MultiDeviceSync.cpp  cJSON.c  multiDevice_funcs.cpp
src/Log/: OrbbecSDK.log.txt
